<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luosu.activitys.LoginActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="62dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="@string/luosu_pass_colon"
        app:layout_constraintBottom_toBottomOf="@+id/edit_pass"
        app:layout_constraintEnd_toStartOf="@+id/edit_pass"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_pass"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/register_btn"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginBottom="174dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/luosu_selector_btn"
        android:gravity="center"
        android:text="@string/luosu_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edit_pass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pass" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginBottom="84dp"
        android:layout_marginLeft="84dp"
        android:layout_marginRight="85dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/luosu_shape_edit"
        android:digits="@string/luosu_edit_digits"
        android:ems="10"
        android:hint="@string/luosu_username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/edit_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:layout_marginBottom="124dp"
        android:layout_marginLeft="85dp"
        android:layout_marginRight="84dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/luosu_shape_edit"
        android:digits="@string/luosu_edit_digits"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_user" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="62dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/luosu_username_colon"
        app:layout_constraintBottom_toBottomOf="@+id/edit_user"
        app:layout_constraintEnd_toStartOf="@+id/edit_user"
        app:layout_constraintTop_toTopOf="@+id/edit_user" />

</android.support.constraint.ConstraintLayout>
