<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.luosu.activitys.LoginActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="62dp"
        android:layout_height="43dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:gravity="center"
        android:text="@string/luosu_pass_colon"
        app:layout_constraintBottom_toBottomOf="@+id/edit_pass"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/edit_pass"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/login"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:background="@drawable/luosu_selector_btn"
        android:gravity="center"
        android:text="@string/luosu_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82"
        app:layout_constraintStart_toStartOf="@+id/edit_pass"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="@+id/edit_pass"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/edit_user"
        android:layout_width="215dp"
        android:layout_height="43dp"
        android:background="@drawable/luosu_shape_edit"
        android:digits="@string/luosu_edit_digits"
        android:ems="10"
        android:hint="@string/luosu_username"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="84dp" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="215dp"
        android:layout_height="44dp"
        android:background="@drawable/luosu_shape_edit"
        android:digits="@string/luosu_edit_digits"
        android:ems="10"
        android:hint="密码"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/edit_user"
        app:layout_constraintEnd_toEndOf="@+id/edit_user"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_user"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.509"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="142dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="62dp"
        android:layout_height="43dp"
        android:gravity="center"
        android:text="@string/luosu_username_colon"
        android:layout_marginLeft="44dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_user"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/edit_user"
        app:layout_constraintEnd_toStartOf="@+id/edit_user"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/register"
        android:layout_width="38dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="注册"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.836"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.681" />

</android.support.constraint.ConstraintLayout>
